fixed title line spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -121,8 +121,6 @@ $menu-label-color: $white-ter
 .blog-list-item.is-featured
   background-color: #fefefe
   box-shadow: 0 0.75rem 1.5rem rgb(18 38 63 / 6%)
-.blog-list-item header
-  display: flex
   margin-bottom: 1em
 .blog-list-item .subtitle
   line-height: 48px !important
